Added missing DELETE for Campeonatos
